--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name=description content="">
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Bootstrap CSS -->
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 		<link href="css/build.css" rel="stylesheet" media="screen">
 
 		<!--<link src="http://localhost:8080/build.css" rel="stylesheet" media="screen">-->
@@ -3305,7 +3306,7 @@
 				<article class="media">
 					<figure class="media-left">
 						<p class="image is-64x64">
-							<img src="https://s3.amazonaws.com/uifaces/faces/twitter/zeldman/128.jpg">
+							<img src="https://getsrc-3o9kb.ondigitalocean.app/p/128">
 						</p>
 					</figure>
 					<div class="media-content">
@@ -3337,7 +3338,7 @@
 				<article class="media">
 					<figure class="media-left">
 						<p class="image is-64x64">
-							<img src="https://s3.amazonaws.com/uifaces/faces/twitter/zeldman/128.jpg">
+							<img src="https://getsrc-3o9kb.ondigitalocean.app/p/128">
 						</p>
 					</figure>
 					<div class="media-content">
@@ -3367,7 +3368,7 @@
 				<article class="media">
 					<figure class="media-left">
 						<p class="image is-64x64">
-							<img src="https://s3.amazonaws.com/uifaces/faces/twitter/zeldman/128.jpg">
+							<img src="https://getsrc-3o9kb.ondigitalocean.app/p/128">
 						</p>
 					</figure>
 					<div class="media-content">
@@ -3382,7 +3383,7 @@
 						<article class="media">
 							<figure class="media-left">
 								<p class="image is-48x48">
-									<img src="https://bulma.io/images/placeholders/96x96.png">
+									<img src="https://getsrc-3o9kb.ondigitalocean.app/p/96">
 								</p>
 							</figure>
 							<div class="media-content">
@@ -3405,7 +3406,7 @@
 						<article class="media">
 							<figure class="media-left">
 								<p class="image is-48x48">
-									<img src="https://bulma.io/images/placeholders/96x96.png">
+									<img src="https://getsrc-3o9kb.ondigitalocean.app/p/96">
 								</p>
 							</figure>
 							<div class="media-content">
@@ -3424,7 +3425,7 @@
 				<article class="media">
 					<figure class="media-left">
 						<p class="image is-64x64">
-							<img src="https://s3.amazonaws.com/uifaces/faces/twitter/zeldman/128.jpg">
+							<img src="https://getsrc-3o9kb.ondigitalocean.app/p/128">
 						</p>
 					</figure>
 					<div class="media-content">
