--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 		<link href="css/build.css" rel="stylesheet" media="screen">
+		<link href="css/style.css" rel="stylesheet" media="screen">
 
 		<!--<link src="http://localhost:8080/build.css" rel="stylesheet" media="screen">-->
 
